# MazeRunner

./: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  setup.py
.github/workflows/: python-build.yml
agents_mazerunner/: testagent.py
analysis/: Data analyse.ipynb  analyse_biologische_inspiratie.ipynb
analysis/helpers/: __init__.py  helper.py
experiments/: action_speed_experiment.py  memory_decay_experiment.py  pathfinding_agent.py  pathfinding_agents.py  pure_random_agents.py  run_batchrun.py
experiments/1_pathfinding_1_random_agents/: experiment_script.py
experiments/1_pathfinding_1_random_speed_agent/: experiment_script.py
experiments/2_pathfinding_agents/: experiment_script.py
experiments/2_pathfinding_speed_agents/: experiment_script.py
experiments/2_pathfindinge_agents/: experiment_script.py
experiments/demo_leaf_tracker/: experiment_script.py
experiments/demo_pathfinding/: experiment_script.py
experiments/demo_pure_random/: experiment_script.py
experiments/demo_speed/: experiment_script.py
experiments/example_batchrunner/: experiment_script.py
experiments/memory_decay/: experiment_script.py
experiments/speed_comparison/: experiment_script.py
experiments/speed_difference/: experiment_script.py
gym_mazerunner/: maze_generator.py  maze_render.py  mazerunner_env.py  runner.py
mazerunner_sim/: __init__.py  observation_and_action.py  simulator.py
mazerunner_sim/agents/: PureRandomAgent.py  __init__.py  agent.py  agent_interface.py  (+3 more)
notebook/: analyse_biologische_inspiratie.ipynb
tests/: place_holder.py
(+36 files in other folders)
