[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[tool:pytest]
testpaths = tests

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[flake8]
max-line-length=140
max-complexity=40
exclude=^docs/,setup.py,__init__.py,^tests/,venv
ignore=I202, W504

[mypy]
ignore_missing_imports = True
